# labelprinter-vc500w

./: README.md  labelprinter.sh  pyproject.toml  setup.py
debian/: changelog  clean  control  copyright  install  labelprinter-vc500w.manpages  rules  run-unit-tests
debian/completion/bash/: bclprinter
debian/completion/fish/: bclprinter.fish
labelprinter/: __main__.py  printer.py
labelprinter/test/: test_printer.py
