[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "labelprinter-vc500w"
version = "1.0"
description = "CLI for controlling Brother VC-500W label printers over TCP/IP"
readme = "README.md"
requires-python = ">=3.5"
license = "AGPL-3.0-or-later"
authors = [
  {name = "Sebastian Noack", email = "sebastian.noack@gmail.com"},
]
keywords = [
  "brother",
  "printer",
  "label-printer",
  "vc-500w",
  "cli",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
dependencies = [
  "Pillow",
]

[project.urls]
Homepage = "https://github.com/snoack/labelprinter-vc500w"
Repository = "https://github.com/snoack/labelprinter-vc500w"

[project.scripts]
bclprinter = "labelprinter.__main__:main"

[tool.setuptools]
packages = ["labelprinter"]
