[build-system]
requires = ["argparse-manpage[setuptools]"]
build-backend = "setuptools.build_meta"

[project]
name = "labelprinter-vc500w"
version = "1.0"
description = "CLI for controlling Brother VC-500W label printers over TCP/IP"
readme = "README.md"
requires-python = ">=3.5"
license = "AGPL-3.0-or-later"
authors = [
  {name = "Sebastian Noack", email = "sebastian.noack@gmail.com"},
]
keywords = [
  "brother",
  "printer",
  "label-printer",
  "vc-500w",
  "cli",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
dependencies = [
  "Pillow",
]

[project.urls]
Homepage = "https://github.com/snoack/labelprinter-vc500w"
Repository = "https://github.com/snoack/labelprinter-vc500w"

[project.scripts]
bclprinter = "labelprinter.__main__:main"

[tool.setuptools]
packages = ["labelprinter"]

[tool.setuptools.data-files]
"share/man/man1" = ["build/man/bclprinter.1"]

[tool.setuptools.cmdclass]
build_py = "build_manpages.build_py"
build_manpages = "build_manpages.build_manpages"

[tool.build_manpages]
manpages = [
  "build/man/bclprinter.1:function=get_argument_parser:pyfile=labelprinter/__main__.py:prog=bclprinter",
]
